# bb

./: .cursorignore  .dockerignore  .env.example  .gitignore  AGENTS.md  API.md  ARCHITECTURE.md  Cargo.toml  Cargo.toml.backup  README.md  config.yaml.bkp  config.yaml.example  daemon.Dockerfile  dev.Dockerfile  docker-compose.dev.yml  docker-compose.yml  rules.yaml.example  test-bookmarks.json
client/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
client-v2/: index.html  package.json  vite.config.ts
client-v2/src/: App.tsx  index.css
client-v2/src/components/: AuthGate.tsx  BookmarkCard.tsx  BookmarkDetailModal.tsx  BookmarkGrid.tsx  BookmarkList.tsx  BookmarkTable.tsx  BulkOperationsModal.tsx  CreateBookmarkModal.tsx  SettingsPanel.tsx  Toolbar.tsx  bookmark-parts.tsx
client-v2/src/hooks/: useDebouncedValue.ts  useDisplayBookmarks.ts  useHiddenTags.ts  usePolling.ts  useResponsive.ts
client-v2/src/lib/: api.ts  store.ts  workspaceFilters.ts
client/public/: index.html  manifest.json
client/src/: App.css  App.tsx  LoginGate.tsx  api.tsx  bookmark.tsx  button.tsx  components.tsx  header.tsx  helpers.ts  index.css  index.tsx  popup.tsx  settings.tsx  setupProxy.js  vars.tsx  workspaces.ts
client/src/components/: AuthGate.tsx  BookmarkCard.tsx  BookmarkDetailModal.tsx  BookmarkGrid.tsx  BookmarkList.tsx  BookmarkTable.tsx  BulkOperationsModal.tsx  CreateBookmarkModal.tsx  SettingsPanel.tsx  TagAutocompleteInput.tsx  TagTokenInput.tsx  Toolbar.tsx  bookmark-parts.tsx
client/src/components/ui/: button.tsx  dialog.tsx
client/src/hooks/: useBookmarkCRUD.ts  useBookmarkSearch.ts  useDebouncedValue.ts  useDisplayBookmarks.ts  useDocumentTitle.ts  useGridLayout.ts  useHiddenTags.ts  useKeyboardNavigation.ts  usePolling.ts  useResponsive.ts  useSettings.ts
client/src/lib/: api.ts  store.ts  workspaceFilters.ts
client/src/store/: bmarksSlice.ts  globalSlice.ts  index.ts  taskQueueSlice.ts
scripts/: generate-favicons.sh
src/: app.rs  auth.rs  backup.rs  bookmarks.rs  buku_migrate.rs  cli.rs  config.rs  editor.rs  eid.rs  images.rs  lock.rs  main.rs  metadata.rs  peekalink.rs  rules.rs  scrape.rs  stealth_scripts.js  storage.rs  task_runner.rs  web.rs  workspaces.rs
src/app/: backend.rs  context.rs  errors.rs  factory.rs  local.rs  mod.rs  orchestrator.rs  remote.rs  service.rs  task_runner.rs
src/cli/: commands.rs  errors.rs  handlers.rs  mod.rs  types.rs  validation.rs
src/metadata/: image_validation.rs  mod.rs  normalize.rs  types.rs
src/metadata/fetchers/: ddg.rs  iframely.rs  microlink.rs  mod.rs  oembed.rs  peekalink.rs  plain.rs  wayback.rs  youtube.rs
src/scrape/: headless.rs  mod.rs  stealth_scripts.js  styles.css
src/search_query/: eval.rs  lexer.rs  mod.rs  normalize.rs  parser.rs  tests.rs
src/semantic/: embeddings.rs  hybrid.rs  index.rs  lexical.rs  mod.rs  preprocess.rs  service.rs  storage.rs
src/tests/: app.rs  backend_csv.rs  bookmarks.rs  mod.rs  rules.rs  rules_config.rs  semantic.rs
src_backup_refactoring/: bookmarks.rs  images.rs  main.rs  metadata.rs  microlink.rs  peekalink.rs  storage.rs
src_backup_refactoring/app/: local.rs  mod.rs  task_runner.rs
src_backup_refactoring/cli/: handlers.rs
src_backup_refactoring/scrape/: headless.rs  mod.rs  styles.css
src_backup_refactoring/tests/: app.rs
