[package]
name = "bb"
version = "0.1.0"
edition = "2021"

[features]
default = []

markdown-docs = ["dep:clap-markdown"]


[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros", "tracing"] }
base64 = "0.22.1"
clap = { version = "4.5.9", features = ["derive"] }
csv = "1.3.0"
headless_chrome = "1.0.10"
homedir = "0.3.4"
image = "0.25.2"
infer = "0.16.0"
inquire = "0.7.5"
log = "0.4.22"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json", "blocking", "native-tls", "socks"] }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yml = "0.0.11"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = { version = "1.1.3", features = ["serde"] }
clap-markdown = { version = "0.1.4", optional = true }
