[package]
name = "bb"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "bb"
path = "src/main.rs"


[features]
default = ["headless"]

markdown-docs = ["dep:clap-markdown"]
headless = ["dep:headless_chrome"]


[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["macros", "tracing"] }
base64 = "0.22.1"
clap = { version = "4.5.9", features = ["derive"] }
ctrlc = "3.4.4"
csv = "1.3.0"
headless_chrome = { version = "1.0.15", optional = true }
homedir = "0.3.4"
image = "0.25.2"
infer = "0.16.0"
inquire = "0.7.5"
log = "0.4.22"
regex = "1.10.6"
reqwest = { version = "0.12.5", features = ["json", "blocking", "native-tls", "socks"] }
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yml = "0.0.11"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["rt", "signal", "rt-multi-thread"] }
tower = "0.5"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# ulid = { version = "1.1.3" }
rusty_ulid = { version = "2", default-features = false, features = ["rand", "chrono"] }
clap-markdown = { version = "0.1.4", optional = true }
once_cell = "1.21.3"
url = "2.5.7"
fastembed = "5"
sha2 = "0.10"
crc32fast = "1.4"
webp = "0.3"
indicatif = "0.17"
rayon = "1.10"
tar = "0.4"
flate2 = "1.0"
chrono = "0.4"
rand = "0.9"
tempfile = "3.24.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.dev]
opt-level = 0
debug = 1

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.24.0"
